# unstructured-intel-gcp

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PROJECT_SUMMARY.md  README.md  VERSIONS.md  docker-compose.yml  project.yaml  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci.yml
airflow/dags/: unstructured_dag.py
conf/ge/: github_suite.yml  hn_suite.yml  wikipedia_suite.yml
docs/: README.md  api_examples.md  architecture.md  deployment.md  performance.md
scripts/: submit_spark.sh
sql/: gh_readmes_sample.sql  hn_comments_7d.sql  hn_stories_7d.sql  wiki_pageviews_7d.sql
src/: __init__.py  config.py  utils.py
src/api/: __init__.py  app.py
src/dq/: __init__.py  run_ge.py
src/extract/: __init__.py  bq_to_gcs.py
src/index/: __init__.py  build_faiss.py
src/spark_jobs/: __init__.py  clean_normalize.py  embed_texts.py
tests/: __init__.py  conftest.py  test_api.py  test_config.py  test_faiss.py  test_text_processing.py  test_utils.py
