[target-version]
python_version = "3.11"

[tool.black]
line-length = 100

[tool.ruff]
select = ["E", "F", "I", "B", "UP"]
line-length = 100

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unstructured-intel-gcp"
version = "0.1.0"
description = "Batch + streaming pipelines for unstructured intelligence on GCP"
authors = [{name = "Dhieddine BARHOUMI", email = "dhieddine.barhoumi@gmail.com"}]
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "pyspark==3.5.0",
    "sentence-transformers==2.2.2",
    "faiss-cpu==1.7.4",
    "google-cloud-bigquery==3.17.1",
    "google-cloud-storage==2.14.0",
    "great-expectations==0.18.8",
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "pydantic==2.5.3",
]
